[package]
name = "sued"
description = "The text editor that doesn't give a damn."
version = "0.10.3"
edition = "2021"
license = "WTFPL"
keywords = ["text", "editor", "ed"]
categories = ["text-editors", "command-line-utilities"]
repository = "https://github.com/that1m8head/sued/"
homepage = "https://that1m8head.github.io/sued/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
which = "4.4.0"
shellexpand = "3.1.0"
regex = "1.9.1"
copypasta = "0.8.2"
